[gd_scene load_steps=34 format=2]

[ext_resource path="res://src/enemies/Hark.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/characters/town citizens/Masc. Citizens/Hark/Hark.png" type="Texture" id=2]
[ext_resource path="res://src/interface/Images/caution.png" type="Texture" id=3]
[ext_resource path="res://src/sprites/particles/waterdrops.png" type="Texture" id=4]
[ext_resource path="res://src/interface/new_theme.tres" type="Theme" id=5]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 0, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 16, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 32, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 48, 224, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 16, 400, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 32, 400, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 48, 400, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "quiet",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.95652
height = 0.0

[sub_resource type="CircleShape2D" id=7]
radius = 74.5

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 110, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 220, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 330, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 440, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 550, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 550, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 660, 0, 110, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 770, 0, 110, 128 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="BitmapFont" id=18]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.239216, 0.109804, 0.631373, 0.941176 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Hark" type="KinematicBody2D" groups=["minimap_objects"]]
scale = Vector2( 2.3, 2.3 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 2.68221e-07 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 2
playing = true
offset = Vector2( 0, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.195652 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="VisibleArea" type="Area2D" parent="."]

[node name="VisibleAreaCollisionShape" type="CollisionShape2D" parent="VisibleArea"]
position = Vector2( 0, -0.108695 )
shape = SubResource( 7 )

[node name="alert" type="Sprite" parent="."]
visible = false
position = Vector2( -70, 1.5 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Water" type="AnimatedSprite" parent="."]
position = Vector2( -9, 5.54348 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 17 )
playing = true

[node name="LifeBar" type="Node2D" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )

[node name="Control" type="Control" parent="LifeBar"]
margin_right = 96.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="LifeBar/Control"]
margin_left = -40.5797
margin_top = -88.4058
margin_right = 39.4203
margin_bottom = -74.4058
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 18 )
custom_styles/fg = SubResource( 19 )
custom_styles/bg = SubResource( 20 )
value = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerDisapear" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="VisibleArea" to="." method="_on_VisibleArea_body_entered"]
[connection signal="body_exited" from="VisibleArea" to="." method="_on_VisibleArea_body_exited"]
